--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "@electron-toolkit/utils": "^4.0.0",
     "electron-updater": "^6.3.9",
     "idb": "^8.0.3",
-    "idb-keyval": "^6.2.2",
-    "matter-js": "^0.20.0"
+    "idb-keyval": "^6.2.2"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
