--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "electron-updater": "^6.3.9",
     "idb": "^8.0.3",
     "idb-keyval": "^6.2.2",
-    "textarea-caret": "^3.1.0"
+    "textarea-caret": "^3.1.0",
+    "zautocorrect": "^0.1.2"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
@@ -45,5 +46,8 @@
     "svelte-check": "^4.3.1",
     "typescript": "^5.9.2",
     "vite": "^7.1.6"
+  },
+  "mac": {
+    "icon": "../../resources/faviconDev.icns"
   }
 }
