--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
+    "convex": "^1.31.0",
+    "convex-svelte": "^0.0.12",
     "electron-updater": "^6.3.9",
     "idb": "^8.0.3",
     "idb-keyval": "^6.2.2",
